# gsuite-mcp

./: .env.example  .gitignore  .goreleaser.yml  .mcp.json  Makefile  README.md  go.mod  go.sum  gsuite-mcp  product-description.md  pyproject.toml
.github/workflows/: ci.yml
cmd/gsuite-mcp/: main.go
docs/: ISH_MODE.md  blog-post.md  brief.md  setup.md  usage.md
docs/plans/: 2025-12-04-gsuite-mcp-go.md  2025-12-04-gsuite-mcp-server.md  2025-12-10-calendar-attendees-design.md  2025-12-15-auth-improvements-design.md
pkg/auth/: fake.go  fake_test.go  oauth.go  oauth_edge_test.go  oauth_test.go  paths.go  paths_test.go
pkg/calendar/: service.go  service_test.go
pkg/config/: env_test.go
pkg/gmail/: service.go  service_email_test.go  service_test.go
pkg/people/: service.go  service_test.go  service_validation_test.go
pkg/retry/: retry.go  retry_edge_test.go  retry_test.go
pkg/server/: mcp_integration_test.go  prompts.go  resources.go  server.go  server_calendar_attendees_test.go  server_calendar_test.go  server_gmail_test.go  server_test.go
src/gsuite_mcp/: __init__.py  __main__.py  server.py
src/gsuite_mcp/auth/: fake_credentials.py  oauth.py
src/gsuite_mcp/services/: calendar.py  (+2 more)
test/: debug_requests_test.go  integration_test.go  scenario_test.go
tests/: test_auth_oauth.py  test_ish_mode.py  test_server.py  test_services_calendar.py  test_services_gmail.py  test_services_gmail_attachments.py  test_services_gmail_drafts.py  test_services_gmail_labels.py  test_services_people.py  test_utils_retry.py
tests/integration/: test_full_workflow.py
(+1 files in other folders)
